Remove panscan information in av_frame_copy_props() if resolution changes.

Fixes ticket #3750.